button alignment fixed

--- a/src/components/Filter/multiRangeSlider.css
+++ b/src/components/Filter/multiRangeSlider.css
@@ -25,11 +25,11 @@
     overflow:hidden;
   }
 }
-@media screen and (min-width: 545px) {
+@media screen and (min-width: 545px)  and (max-width: 760px) {
   .filter{
     margin: 2rem;
     width:20vw;
-    height: 20vw;
+    height: 15vw;
     border-radius: 5px;
     background-color:#f0f3f5;
     margin-left:-5vw;
